--- a/src/components/TagGallery.css
+++ b/src/components/TagGallery.css
@@ -56,3 +56,9 @@
 .tag-gallery__shop-link {
   margin-top: auto;
 }
+
+@media (max-width: 640px) {
+  .tag-gallery {
+    grid-template-columns: 1fr;
+  }
+}
